fix: adjusts card pets alignment

--- a/src/pages/home-user/index.css
+++ b/src/pages/home-user/index.css
@@ -20,6 +20,7 @@ main{
         border-radius: 4px;
         min-width: 200px;
         height: 272px;
+        padding-bottom: 5px;
         /* border: 1px solid black; */
     }
 
@@ -27,7 +28,7 @@ main{
             width: 100%;
             height: 160px;
             object-fit: cover;
-            background-color: red;
+            background-color: var(--color-whtie-1);
         }
 
 
